fixed list hover and colour elements

--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
   <title></title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Dosis:700' rel='stylesheet' type='text/css'>
 </head>
 
 <header>
-  <nav>
-    <strong>Ant Nest</strong>
+  <nav class="navbox">
+    <h1><strong>Beetles</strong></h1>
     <ol>
-      <li>Ant Nest</li>
-      <li>Stag</li>
-      <li>Dung</li>
-      <li>Tortoise</li>
+      <li>
+        <a href="#"><h2>Ant Nest</h2></a>
+      </li>
+      <li>
+        <a href="#"><h2>Stag</h2></a>
+      </li>
+      <li>
+        <a href="#"><h2>Dung</h2></a>
+      </li>
+      <li>
+        <a href="#"><h2>Tortoise</h2></a>
+      </li>
     </ol>
   </nav>
 </header>
