fixed all bugs but one

--- a/index.html
+++ b/index.html
@@ -2,32 +2,31 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Beetles</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Dosis:700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Dosis:700" rel="stylesheet">
 </head>
 
-<header>
-  <nav class="navbox">
-    <h1><strong>Beetles</strong></h1>
-    <ol>
-      <li>
-        <a href="#"><h2>Ant Nest</h2></a>
-      </li>
-      <li>
-        <a href="#"><h2>Stag</h2></a>
-      </li>
-      <li>
-        <a href="#"><h2>Dung</h2></a>
-      </li>
-      <li>
-        <a href="#"><h2>Tortoise</h2></a>
-      </li>
-    </ol>
-  </nav>
-</header>
 <body>
-
+  <header>
+    <nav class="navbox">
+      <h1><strong>Beetles</strong></h1>
+      <ul>
+        <li>
+          <a href="#"><h2>Ant Nest</h2></a>
+        </li>
+        <li>
+          <a href="#"><h2>Stag</h2></a>
+        </li>
+        <li>
+          <a href="#"><h2>Dung</h2></a>
+        </li>
+        <li>
+          <a href="#"><h2>Tortoise</h2></a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
